--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,18 @@
   "dependencies": {
     "@chakra-ui/react": "^3.7.0",
     "@emotion/react": "^11.14.0",
+    "@hookform/resolvers": "^4.1.3",
     "@tailwindcss/vite": "^4.0.4",
     "axios": "^1.8.1",
+    "lucide-react": "^0.477.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.4"
+    "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.2",
+    "react-router-dom": "^7.2.0",
+    "tailwindcss": "^4.0.4",
+    "yup": "^1.6.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
