--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^4.1.3",
     "@tailwindcss/vite": "^4.0.4",
     "axios": "^1.8.1",
+    "browser-image-compression": "^2.0.2",
     "lucide-react": "^0.477.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
